[package]
name = "pallet-nomination-pools-benchmarking"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME nomination pools pallet benchmarking"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# parity
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }

# FRAME
frame-benchmarking = { version = "37.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407" }
frame-election-provider-support = { version = "37.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407" }
frame-support = { version = "37.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", features = ["tuples-96"] }
frame-system = { version = "37.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407" }
pallet-bags-list = { version = "36.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407" }
pallet-staking = { version = "37.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407"}
pallet-nomination-pools = { version = "1.0.0", default-features = false, path = "../" }

# Substrate Primitives
sp-runtime = { version = "39.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407" }
sp-runtime-interface = { version = "28.0.0", default-features = false,git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407" }
sp-staking = { version = "34.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407" }
sp-std = { version = "14.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407" }

[dev-dependencies]
pallet-balances = { version = "38.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407" }
pallet-timestamp = { version = "36.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407" }
pallet-staking-reward-curve = { version = "12.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407" }
sp-core = { version = "34.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407" }
sp-io = { version = "38.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407" }

[features]
default = ["std"]

std = [
	"frame-benchmarking/std",
	"frame-election-provider-support/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-bags-list/std",
	"pallet-staking/std",
	"pallet-nomination-pools/std",
	"sp-runtime/std",
	"sp-runtime-interface/std",
	"sp-staking/std",
	"sp-std/std",
]

runtime-benchmarks = [
	"frame-election-provider-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-nomination-pools/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",
]
