[package]
name = "pallet-nomination-pools-runtime-api"
version = "1.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Runtime API for nomination-pools FRAME pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
sp-api = { workspace = true }
sp-std = { workspace = true }
pallet-nomination-pools = { version = "1.0.0", default-features = false, path = "../" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-std/std",
	"pallet-nomination-pools/std",
]
