[package]
name = "pallet-nomination-pools-test-staking"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME nomination pools pallet tests with the staking pallet"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
codec = { package = "parity-scale-codec", version = "3.7.0", features = ["derive"] }
scale-info = { version = "2.0.1", features = ["derive"] }

sp-runtime = { workspace = true}
sp-io = { workspace = true }
sp-std = { workspace = true}
sp-staking = { workspace = true }
sp-core = { workspace = true }

frame-system = { workspace = true }
frame-support = { workspace = true }
frame-election-provider-support = { workspace = true }

pallet-timestamp = { workspace = true }
pallet-balances = {workspace = true }
pallet-staking = { workspace = true }
pallet-bags-list = { workspace = true }
pallet-staking-reward-curve = {workspace = true }
pallet-nomination-pools = { version = "1.0.0-dev", path = ".." }

sp-tracing = { vworkspace = true }
log = { version = "0.4.0" }
